--- a/lib/omni.bib
+++ b/lib/omni.bib
@@ -91,12 +91,13 @@ Section: Research Articles},
 	file = {Snapshot:/home/almut/Zotero/storage/CIARCCBT/e202001004.html:text/html;Full Text PDF:/home/almut/Zotero/storage/FQWUJUTG/Lütge et al. - 2021 - CellMixS quantifying and visualizing batch effect.pdf:application/pdf},
 }
 
-@Manual{R-bettr,
+@manual{R-bettr,
   title = {bettr: a better way to explore what is best},
   author = {Federico Marini and Charlotte Soneson},
   year = {2021},
   note = {R package version 0.1.0},
   url = {https://github.com/federicomarini/bettr},
+  urldate = {2021-07-19},
 }
 
 @article{zappia_exploring_2018,
