--- a/sc_benchmarks_poster.Rmd
+++ b/sc_benchmarks_poster.Rmd
@@ -26,9 +26,9 @@ author:
     affil: 3
     twitter: rioksana
     email: 
-  - name: '**Izaskun Mallona Gonzalez**'
+  - name: '**Izaskun Mallona**'
     affil: 1,2
-  - name: '**Charlotte Soneson'
+  - name: '**Charlotte Soneson**'
     affil: 2,4
   - name: '**Pierre-Luc Germain**'
     affil: 1,2,5
@@ -55,12 +55,12 @@ affiliation:
   - num: 4
     address: Friedrich Miescher Institute, Basel, Switzerland
   - num: 5
-    address:  D-HEST Institute for Neurosciences, ETH Zürich
+    address:  D-HEST Institute for Neurosciences, ETH Zürich, Switzerland
   - num: 6
-    address:  Center for Thrombosis and Hemostasis (CTH), Johannes Gutenberg University Mainz
+    address:  Center for Thrombosis and Hemostasis (CTH), Johannes Gutenberg University Mainz, Germany
 
 main_findings:
-  - "Continous benchmarking of single cell tools using __renku__"
+  - "Continous benchmarking of single-cell tools using __RENKU__"
 main_textsize: "140px"
 logoright_name: "figures/image10.png"
 logoleft_name: "figures/sib_org.png"
@@ -74,7 +74,7 @@ output:
     number_sections: false
 bibliography: "lib/omni.bib"
 link-citations: false
-csl: "lib/citations.csl"
+csl: "lib/citations_2.csl"
 primary_colour: \#01192d 
 secondary_colour: \#00a877
 accent_colour: \#f24ba0
@@ -112,9 +112,9 @@ options(knitr.table.format = "html")
 **Benchmarking** is a critical step for the development of bioinformatic methods and provides important insights for their application.  
 The current benchmarking scheme has many **limitations**:
 
--- it is a **`snapshot`** of the available methods at a certain time point  
--- it can be **`outdated`**, already at the time of a publication  
--- **`low comparability`**: different procedures, different datasets, different evaluation criteria  
+-- it is a **`snapshot`** of the available methods at a certain time point.  
+-- it can be **`outdated`**, already at the time of a publication. 
+-- **`low comparability`**: different procedures, different datasets, different evaluation criteria. 
 -- all of the above can lead to **`different conclusions`** among benchmarks made at different time points or at different groups.  
 
 <br/>
@@ -127,19 +127,19 @@ $\checkmark$ Here we propose a new **modular** and **extensible** framework base
 
 $\checkmark$ The framework consists of **`data`**, **`method`** and **`metric`** repositories (or “modules”) that are connected via a **`knowledge graph`** from the **`RENKU system`**. 
 
-$\checkmark$ The results could then be displayed in an **interactive dashboard** to be openly explored by any analyst looking for recommendations of tools
+$\checkmark$ The results could then be displayed in an **interactive dashboard** to be openly explored by any analyst looking for recommendations of tools.
 
-$\checkmark$ Any new data, method or metric can be added by the **community** to extend the benchmark
+$\checkmark$ Any new data, method or metric can be added by the **community** to extend the benchmark.
 
 
 ### Key features of the developed benchmarking framework: 
 
 + Update the results of the benchmark periodically to provide the analysts with the latest recommendations
-+ Be easily extended thanks to templates for data, methods or metrics
-+ Fully follow the **`FAIR principles`** thanks to a Docker image system, an integration with Gitlab and the full **`provenance`** (tracking of inputs, commands and generated files)
++ Easy extendable thanks to templates for data, methods or metrics
++ Follow the **`FAIR principles`** thanks to a Docker image system, an integration with Gitlab and the full **`provenance`** (tracking of inputs, commands and generated files)
 + Use a **variety of programming languages** commonly used in bioinformatics: R, Python, Bash, Julia,...
 
-```{r omni, echo=FALSE, out.width="90%", fig.cap="Overview of the proposed benchmarking framework on the Renku platform. Each step of the benchmark consists of a set of repositories (a.k.a “modules”) that perform a coordinated task (e.g. standardized data processing). Any new data, method or metric can be easily integrated in the framework by the scientific community and trigger a continuous delivery to the analysts with up-to-date recommendations. Each component of the framework is automatically tracked by the knowledge graph of Renku and contain Docker images to provide fully reproducible results."}
+```{r omni, echo=FALSE, out.width="90%", fig.cap="Overview of the proposed benchmarking framework on the RENKU platform. Each step of the benchmark consists of a set of repositories (a.k.a “modules”) that perform a coordinated task (e.g. standardized data processing). Any new data, method or metric can be easily integrated in the framework by the scientific community to trigger a continuous delivery to the analysts with up-to-date recommendations. Each component of the framework is automatically tracked by the knowledge graph of RENKU and contain Docker images to provide fully reproducible results."}
 
 
 knitr::include_graphics("figures/renku_shema.png")
@@ -151,18 +151,18 @@ knitr::include_graphics("figures/renku_shema.png")
 
 # PROTOTYPE 
 
-Based on the above concept, we are currently building a prototype for community-based benchmarking of single cell batch correction methods. 
-The research in **`single-cell`** is a perfect use-case, where 900 tools have been developed in only a few years [@zappia_exploring_2018] and where the benchmarking efforts are often **not** **`coordinated`**, **not** **`extendable`** and **not** **`reproducible`**.
+Based on the above concept, we are currently building a prototype for community-based benchmarking of single-cell batch correction methods. 
+Research in **single-cell RNA-seq (scRNA-seq)** is a perfect use case, where 900 tools have been developed in only a few years [@zappia_exploring_2018] and where the benchmarking efforts are often **not** **`coordinated`**, **not** **`extendable`** and **not** **`reproducible`**.
 
 **_Our prototype consists of_**:
 
-+ Two datasets of 2370 genes x 3613 cells separated in 2 batches  and 1401 genes x 13575 cells separated in 3 batches [@su_cellbench_2020; @lutge_cellmixs_2021]
++ Two datasets of 2370 genes x 3613 cells separated in 2 batches  and 1401 genes x 13575 cells separated in 3 batches [@su_cellbench_2020; @lutge_cellmixs_2021].
 + Common preprocessing consisting of normalization, highly-variable genes selection, dimensionality reduction. 
-+ An integration using the MNN method [@haghverdi_batch_2018]
-+ Evaluating batch-effect using the LISI metric [@korsunsky_fast_2019] and cms score [@lutge_cellmixs_2021]
-+ Exploring the results using the bettr [@R-bettr]
++ An integration using the MNN method [@haghverdi_batch_2018].
++ Evaluating batch-effect using the LISI metric [@korsunsky_fast_2019] and cms score [@lutge_cellmixs_2021].
++ Exploring the results using the interactive browser bettR [@R-bettr].
 
-```{r proto1, echo=FALSE, out.width="95%", fig.cap="Example of the proposed framework applied to benchmark batch correction methods of scRNA-seq data. Datasets are uniformly processed and passed to a batch-correction method of a separated module. Results are displayed in a shiny app for an interactive exploration of the results. All modules are connected through the Renku knowledge graph, which allows to track workflows from a set of repositories using different environments and programming languages." }
+```{r proto1, echo=FALSE, out.width="95%", fig.cap="Example of the proposed framework applied to benchmark batch correction methods of scRNA-seq data. Datasets are uniformly processed and passed to a batch-correction method of a separated module. Results are displayed in a shiny app for an interactive exploration of the results. All modules are connected through the RENKU knowledge graph, which allows to track workflows from a set of repositories using different environments and programming languages." }
 
 knitr::include_graphics("figures/proto_small.png")
 ``` 
@@ -181,15 +181,15 @@ knitr::include_graphics("figures/logo_renku.svg")
 
 On **RENKU**:
 
-+ Fully interactive sessions can be accessed through the browser, with no local installation needed
++ As RENKU is based on cloud computing fully interactive sessions can be accessed through the browser, with no local installation needed or through a CLI.
 
-+ Versioning and containers ensure precise and reproducible computational environments
++ Versioning and containers ensure precise and reproducible computational environments.
 
-+ Datasets and workflows are automatically tracked in a **`knowledge graph`**, which can be queried from within a project, a group of projects or even across deployments
++ Datasets and workflows are automatically tracked in a **`knowledge graph`**, which can be queried from within a project, a group of projects or even across deployments.
 
-+ Workflows can be re-run or updated automatically when inputs such as datasets or scripts change 
++ Workflows can be re-run or updated automatically when inputs such as datasets or scripts change. 
 
-+ CI/CD can be leveraged to automate repetitive and predictable tasks, such as fetching results of a piece of analysis to integrate into a dashboard
++ CI/CD can be leveraged to automate cumbersome tasks, such as fetching results of a piece of analysis to integrate into a dashboard.
 
 
 ```{r renku, echo=FALSE, out.height="70%", out.width="70%"}
